3822B1FI1/5_shared_jacobi_oneapi/shulpin_ilya/log.txt
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/5_shared_jacobi_oneapi/shulpin_ilya/shared_jacobi_oneapi.cpp:46:46: error: use of undeclared identifier 'max_diff'
   46 |             sycl::buffer<float, 1> diff_buf{&max_diff, sycl::range<1>{1}};
      |                                              ^
1 error generated.
